<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="415dp"
        android:layout_height="250dp"
        android:src="@drawable/nenlogo"
        android:scaleType="center"/>
    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/imvback"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Xác nhận OTP"
            android:textSize="30dp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nhập OTP được gửi đến"
            android:textSize="15dp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/textMobile"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:paddingLeft="2dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="#F44336"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/inputCode1"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputCode2"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/inputCode3"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/inputCode4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/inputCode5"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/inputCode6"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noma"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textResendOTP"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendagian"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#F44336"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginLeft="30dp"
            android:id="@+id/btnVerify"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="180dp"
            android:backgroundTint="#FFD705"
            android:text="@string/send"
            android:textColor="#000000"
            android:textSize="20dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

    </LinearLayout>



